# ProgrammingConcepts_noEclipse

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  cmake_install.cmake
chapter-01/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  ch-01-ex-01-solution.cpp  ch-01-ex-02-solution.cpp  ch-01-ex-03-solution.cpp  ch-01-ex-04-solution.cpp  ch-01-ex-05-solution.cpp  ch-01-ex-06-solution.cpp  ch-01-ex-07-solution.cpp  cmake_install.cmake  exercise-template  exercise-template.cpp  exercise_1_1  exercise_1_1.cpp  exercise_1_1.cpp~  exercise_1_2.cpp  exercise_1_3.cpp  exercise_1_4.cpp  exercise_1_5.cpp
chapter-02/: CMakeLists.txt  ch-02-ex-02-solution.cpp  ch-02-ex-03-solution.cpp  ch-02-ex-04-solution.cpp  ch-02-ex-05-solution.cpp  ch-02-ex-06-solution.cpp  exercise_2_5.cpp  exercise_2_6.cpp
chapter-03/: CMakeLists.txt  ch-03-ex-01-solution.cpp  ch-03-ex-02-solution.cpp  ch-03-ex-03-solution.cpp  exercise_3_1.cpp  exercise_3_2.cpp  exercise_3_3.cpp
chapter-04/: CMakeLists.txt  ch-04-ex-01-solution.cpp  ch-04-ex-02-solution.cpp  ch-04-ex-03-solution.cpp  ch-04-ex-04-solution.cpp  exercise_4_1.cpp  exercise_4_2.cpp  exercise_4_3.cpp
chapter-05/: ArrayUtil.cpp  ArrayUtil.hpp  CMakeLists.txt  Gauss.cpp  Gauss.hpp  ch-05-FunctionOverloading.cpp  ch-05-ex-01-solution.cpp  ch-05-ex-02-solution.cpp  ch-05-ex-03-solution.cpp  ch-05-ex-04-solution.cpp  ch-05-ex-05-solution.cpp  ch-05-ex-06-solution.cpp  ch-05-ex-07-solution.cpp  ch-05-ex-08-solution.cpp  ch-05-ex-10-solution.cpp  exercise_5_10.cpp  exercise_5_3.cpp  exercise_5_4.cpp  exercise_5_6.cpp  exercise_5_8.cpp  matrix_operations.cpp  matrix_operations.hpp
chapter-06/: CMakeLists.txt  ComplexMatrix3x3.cpp  ComplexMatrix3x3.hpp  ComplexNumber.cpp  ComplexNumber.hpp  DoubleMatrix2x2.cpp  DoubleMatrix2x2.hpp  Matrix22.cpp  Matrix22.hpp  \  ch-06-ex-01-solution.cpp  ch-06-ex-02-solution.cpp  exercise_6_1.cpp  exercise_6_2.cpp  test_complex_numbers.cpp
chapter-07/: CMakeLists.txt  ForwardEulerSolver.cpp  GraduateStudent.cpp  GraduateStudent.hpp  PhDStudent.cpp  PhDStudent.hpp  RungeKuttaSolver.cpp  RungeKuttaSolver.hpp  Student.cpp  Student.hpp  ch-07-ex-01-solution.cpp  ch-07-ex-03-solution.cpp  exercise_7_1.cpp  exercise_7_3.cpp  graduate_student.cpp  student.cpp
chapter-07/exercise1/: graduate_student.hpp  phd_student.cpp  phd_student.hpp  student.hpp
chapter-07/exercise2/: abstract_person.cpp  abstract_person.hpp  abstract_person_abstract_instance.cpp  abstract_person_instance.cpp  abstract_person_nopublic.cpp  abstract_person_novirtual.cpp  abstract_person_pure_novirtual.cpp
chapter-07/exercise3/: AbstractOdeSolver.cpp  AbstractOdeSolver.hpp  ForwardEulerSolver.cpp  ForwardEulerSolver.hpp  RungeKuttaSolver.cpp  RungeKuttaSolver.hpp
chapter-08/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  Point2d.cpp  Point2d.hpp  ch-08-ex-01-solution.cpp  ch-08-ex-02-solution.cpp  ch-08-ex-03-solution.cpp  ch-08-ex-04-solution.cpp  exercise_8_1.cpp  exercise_8_2.cpp  exercise_8_3.cpp
chapter-08/exercise3/: ComplexNumber.cpp  ComplexNumber.hpp
chapter-09/: AbstractOdeSolver.cpp  AbstractOdeSolver.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  FileNotOpenException.cpp  FileNotOpenException.hpp  ForwardEulerSolver.cpp  ForwardEulerSolver.hpp  RungeKuttaSolver.cpp  ch-09-ex-01-solution.cpp  ch-09-ex-02-solution.cpp  ch-09-ex-03-solution.cpp  exercise_9_2.cpp  exercise_9_3.cpp
chapter-09/data_types/: Probability.cpp  Probability.hpp  ProbabilityException.hpp
chapter-09/ode_solver_lib/: AbstractOdeSolver.hpp  ForwardEulerSolver.hpp  RungeKuttaSolver.hpp
chapter-10/: CMakeLists.txt  exercise_10_1.cpp
chapter-10/exceptions/: OutOfBoundsException.hpp  SizeException.hpp
chapter-10/linear_algebra/: Matrix.hpp  Vector.cpp  Vector.hpp  vector_functions.cpp  vector_functions.hpp
chapter-11/: CMakeLists.txt  Vector.cpp  Vector.hpp  ch-11-ex-01-solution.cpp  ch-11-ex-02-solution.cpp  ch-11-ex-03-solution.cpp  ch-11-mpi-vector.cpp  mpi_hello_world.cpp
chapter-12/: CMakeLists.txt  SecondOrderOde.hpp
last_exams/: CMakeLists.txt  CompositeIntegrator.cpp  CompositeIntegrator.hpp  IntegrationGrid.cpp  IntegrationGrid.hpp  Interval.hpp  MidpointFactory.hpp  MidpointRule.cpp  MidpointRule.hpp  QuadratureFactory.hpp  QuadratureRule.hpp  SimpsonFactory.hpp  SimpsonRule.cpp  SimpsonRule.hpp  composite_test.cpp  quadrature_test.cpp
projects/: CMakeLists.txt
projects/project01/: AbstractMatrix.hpp  CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.hpp  ConjugateGradientDenseMatrix.cpp  ConjugateGradientDenseMatrix.hpp  CsrMatrix.cpp  CsrMatrix.hpp  CsrMatrix_radu.cpp  DenseMatrix.cpp  DenseMatrix.hpp  Laplacian2DMatrixGenerator.cpp  Laplacian2DMatrixGenerator.hpp  Vector.cpp  Vector.hpp  project-01-solution.cpp
projects/project01.1/: AbstractMatrix.hpp  BandedMatrix.hpp  CMakeLists.txt  ConjugateGradient.hpp  DenseMatrix.hpp  Laplacian2DMatrixGenerator.hpp  Vector.hpp  project-01.1-solution.cpp
projects/project02/: AbstractDirectSolver.hpp  AbstractMatrix.hpp  BandedMatrix.hpp  BandedMatrix_radu.hpp  CMakeLists.txt  CholeskySolver.hpp  ConjugateGradient.hpp  DenseMatrix.hpp  LUSolver.hpp  LUSolver_radu.cpp  Laplacian2DMatrixGenerator.hpp  Vector.hpp  project-02-solution.cpp
quiz-solutions/: CMakeLists.txt
quiz-solutions/quiz01/: CMakeLists.txt  quiz-01-solution.cpp
quiz-solutions/quiz02/: CMakeLists.txt  Quaternion.cpp  Quaternion.hpp  Vector3D.cpp  Vector3D.hpp  quiz-02-solution.cpp
quiz-solutions/quiz03/: CMakeLists.txt  Functions.cpp  Functions.hpp  NewtonSolver.hpp  Scalar.cpp  Scalar.hpp  Vector2D.cpp  Vector2D.hpp  quiz-03-solution.cpp
quiz-solutions/quiz04/: AbstractMatrix.hpp  CMakeLists.txt  DenseMatrix.hpp  GaussSeidel.hpp  Laplacian2DMatrixGenerator.hpp  Vector.hpp  WallClock.cpp  WallClock.hpp  quiz-04-solution.cpp
