cmake_minimum_required(VERSION 2.6)
project(PCSC-Exercises)

add_subdirectory(chapter-01)
add_subdirectory(chapter-02)
add_subdirectory(chapter-03)
add_subdirectory(chapter-04)
add_subdirectory(chapter-05)
add_subdirectory(chapter-06)
add_subdirectory(chapter-07)
add_subdirectory(chapter-08)
add_subdirectory(chapter-09)
add_subdirectory(chapter-10)
add_subdirectory(chapter-11)

add_subdirectory(quiz-solutions)
add_subdirectory(projects)
