include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# The next lines represent a list of all the executables in the folder (chapter)
# There is typically one executable per exercise.
# As you solve exercises, you need to add them here.
# The syntax is add_executable(executable_name source_file_name)

add_executable(exercise-template exercise-template.cpp)
add_executable(exercise_1_1 exercise_1_1.cpp)
add_executable(exercise_1_2 exercise_1_2.cpp)
add_executable(exercise_1_3 exercise_1_3.cpp)
add_executable(exercise_1_4 exercise_1_4.cpp)
add_executable(exercise_1_5 exercise_1_5.cpp)
add_executable(exercise_1_6 exercise_1_6.cpp)
add_executable(exercise_1_7 exercise_1_7.cpp)
