include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# The next lines represent a list of all the executables in the folder (chapter)
# There is typically one executable per exercise.
# As you solve exercises, you need to add them here.
# The syntax is add_executable(executable_name source_file_name)

add_executable(ch-02-ex-02-solution ch-02-ex-02-solution.cpp)
add_executable(ch-02-ex-03-solution ch-02-ex-03-solution.cpp)
add_executable(ch-02-ex-04-solution ch-02-ex-04-solution.cpp)
add_executable(ch-02-ex-05-solution ch-02-ex-05-solution.cpp)
add_executable(ch-02-ex-06-solution ch-02-ex-06-solution.cpp)