include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# The next lines represent a list of all the executables in the folder (chapter)
# There is typically one executable per exercise.
# As you solve exercises, you need to add them here.
# The syntax is add_executable(executable_name source_file_name)

#add_executable(exercise-template exercise-template.cpp)
#add_executable(exercise_2_1 exercise_2_1.cpp)
#add_executable(exercise_2_2 exercise_2_2.cpp)
#add_executable(exercise_2_3 exercise_2_3.cpp)
#add_executable(exercise_2_4 exercise_2_4.cpp)
add_executable(exercise_2_5 exercise_2_5.cpp)
#add_executable(exercise_2_6 exercise_2_6.cpp)
