include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# The next lines represent a list of all the executables in the folder (chapter)
# There is typically one executable per exercise.
# As you solve exercises, you need to add them here.
# The syntax is add_executable(executable_name source_file_name)

add_executable(exercise_5_3 exercise_5_3.cpp)
add_executable(exercise_5_4 exercise_5_4.cpp)
add_executable(exercise_5_5 exercise_5_5.cpp)
add_executable(exercise_5_6 exercise_5_6.cpp)
add_executable(exercise_5_8 exercise_5_8.cpp matrix_operations.cpp)
add_executable(exercise_5_10 exercise_5_10.cpp matrix_operations.cpp)
